# esylla-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: build.yml  check.yml  test.yml
examples/: custom_signup.rs  customize.rs  with_score.rs
src/: adapter.rs  config.rs  error.rs  jwt.rs  lib.rs  module.rs  session.rs
src/api/: cookie.rs  extract.rs  handlers.rs  mod.rs  oauth.rs
src/crypto/: mod.rs  password.rs  token.rs
src/dto/: login.rs  mod.rs  password.rs  signup.rs
src/entity/: mod.rs  oauth_connection.rs  oauth_state.rs  one_time_token.rs  pending_registration.rs  session.rs  user.rs
src/migration/: m20260621_000001_create_auth_tables.rs  m20260621_000002_create_oauth_state.rs  m20260621_000003_create_pending_registration.rs  mod.rs
src/oauth/: connection.rs  github.rs  mod.rs  oidc.rs  provider.rs  state.rs
src/service/: login.rs  mod.rs  oauth.rs  password.rs  signup.rs
src/store/: db.rs  mailer.rs  mod.rs  one_time_token.rs  pending_registration.rs  redis.rs  session.rs  smtp.rs  user.rs
tests/: email_password.rs  jwt.rs  oauth.rs  postgres.rs  redis.rs
tests/common/: mod.rs
